# simple_shell

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  __getline.c  _pow_recursion.c  _realloc.c  _strcpy.c  _strlen.c  add_input_history.c  add_input_string.c  add_node_list.c  allowed_functions.md  change_directory.c  complete_path.c  copy_double_pointer.c  copy_string_index.c  echo.c  execute_command.c  execute_decision.c  exit_command.c  find_control.c  free_double_pointer.c  free_list.c  free_user_input_type.c  get_builtin_function.c  get_env_variable.c  help.c  parse_multiline.c  parse_string.c  print_double_pointer.c  print_env.c  print_working_directory.c  prompt.c  run.sh  set_env_variable.c  shell  shell.c  shell.h  steps.md  (+1 more)
